# kineto

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .lintrunner.toml  CONTRIBUTING.md  LICENSE  README.md
.github/: pytorch-probot.yml
benchmarks/: CMakeLists.txt  json_output_benchmark.cpp
benchmarks/perfetto/: __init__.py  framework.py  install.py  requirements.txt  run.py  s3_utils.py  table.py
benchmarks/perfetto/backends/: __init__.py  clp.py  common.py  perfetto.py
libkineto/: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  defs.bzl  libkineto_defs.bzl  rocprofiler_hide.lds
libkineto/include/: AbstractConfig.h  ActivityLoggerFactory.h  ActivityProfilerBase.h  ActivityProfilerFactory.h  ActivityProfilerInterface.h  ActivityTraceInterface.h  ActivityType.h  ClientInterface.h  ClientTraceActivity.h  Config.h  CpuTraceBuffer.h  DeviceActivityInterface.h  DeviceType.h  DynamicPluginInterface.h  EnvMetadata.h  GenericTraceActivity.h  IActivityProfiler.h  ICompositeProfiler.h  IConfigHandler.h  ICorrelationObserver.h  ILoggerObserver.h  IProfilerSession.h  ITraceActivity.h  KinetoDynamicPluginInterface.h  KinetoPluginFormat.h  Metadata.h  MetadataFieldCatalog.h  PluginLoader.h  PluginProfiler.h  PluginTraceBuilder.h  ResourceInfo.h  ThreadUtil.h  TraceActivity.h  TraceSpan.h  TypedMetadata.h  TypedMetadataJson.h  external_api.h  libkineto.h  output_base.h  time_since_epoch.h
libkineto/ipcfabric/: CMakeLists.txt  Endpoint.h  FabricManager.h  README.md  Utils.h
libkineto/sample_programs/: README.md  build-cu.sh  build.sh  kineto_cupti_profiler.cpp  kineto_playground.cpp  kineto_playground.cu  kineto_playground.cuh  kineto_rocm_memcpy_kind_repro.cpp  kineto_rocm_stream_interleave_repro.cpp  kineto_rocm_stream_interleave_repro_kernels.h  kineto_rocm_stream_interleave_repro_kernels.hip  kineto_stress_test.cpp  random_ops_stress_test.cu  random_ops_stress_test.cuh
libkineto/src/: AbstractConfig.cpp  AbstractConfig.h  ActivityBuffers.h  ActivityLoggerFactory.h  ActivityProfiler.cpp  ActivityProfiler.h  ActivityProfilerController.cpp  ActivityProfilerController.h  ActivityProfilerProxy.cpp  ActivityProfilerProxy.h  ActivityProfilerThread.cpp  ActivityProfilerThread.h  ActivityProfilerThreah.cpp  ActivityTrace.cpp  ActivityTrace.h  ActivityType.cpp  ApproximateClock.cpp  ApproximateClock.h  AsyncActivityProfilerHandler.cpp  AsyncActivityProfilerHandler.h  Config.cpp  Config.h  ConfigLoader.cpp  ConfigLoader.h  CudaDeviceProperties.cpp  CudaDeviceProperties.h  CudaMetadataFields.h  CudaUtil.cpp  CudaUtil.h  CuptiActivity.cpp  CuptiActivity.h  CuptiActivity.tpp  CuptiActivityApi.cpp  CuptiActivityApi.h  CuptiActivityBuffer.h  CuptiActivityInterface.cpp  CuptiActivityInterface.h  CuptiActivityPlatform.cpp  CuptiActivityPlatform.h  CuptiActivityProfiler.cpp  (+116 more)
libkineto/src/dynamic_plugin/: PluginLoader.h  PluginProfiler.h  PluginTraceBuilder.h  PluginUtils.h
libkineto/src/plugin/aiupti/: AiuptiActivityApi.cpp  AiuptiActivityApi.h  AiuptiActivityBuffer.h  AiuptiActivityHandlers.cpp  AiuptiActivityProfiler.cpp  AiuptiActivityProfiler.h  AiuptiProfilerMacros.h  CMakeLists.txt  FindAIUToolkit.cmake
libkineto/src/plugin/xpupti/: CMakeLists.txt  FindSYCLToolkit.cmake  XpuptiActivityApi.cpp  XpuptiActivityApi.h  XpuptiActivityApiAndSessionVersionSelector.h  XpuptiActivityApiV1.cpp  XpuptiActivityApiV1.h  XpuptiActivityApiV2.cpp  XpuptiActivityApiV2.h  XpuptiActivityBuffer.h  XpuptiActivityHandlers.cpp  XpuptiActivityHandlersV1.cpp  XpuptiActivityHandlersV2.cpp  XpuptiActivityProfiler.cpp  XpuptiActivityProfiler.h  XpuptiActivityProfilerSession.cpp  XpuptiActivityProfilerSession.h  XpuptiActivityProfilerSessionV1.cpp  XpuptiActivityProfilerSessionV1.h  XpuptiActivityProfilerSessionV2.cpp  XpuptiActivityProfilerSessionV2.h  XpuptiProfilerMacros.cpp  XpuptiProfilerMacros.h  XpuptiScopeProfilerApi.cpp  XpuptiScopeProfilerApi.h  XpuptiScopeProfilerConfig.cpp  XpuptiScopeProfilerConfig.h  XpuptiScopeProfilerHandlers.cpp  XpuptiScopeProfilerSession.cpp  XpuptiScopeProfilerSession.h  XpuptiVersionLogger.cpp  XpuptiVersionLogger.h
libkineto/stress_test/: kineto_stress_test.cpp  random_ops_stress_test.cu  random_ops_stress_test.cuh  run_multiproc_stress_test.sh  stress_test_dense.json  stress_test_dense_mp.json  stress_test_input.h  stress_test_uvm_nccl.json  tensor_cache.cu  tensor_cache.cuh  utils.h
libkineto/test/: ActivityProfilerControllerTest.cpp  ActivityProfilerTest.cpp  ApproximateClockTest.cpp  AsyncActivityProfilerHandlerTest.cpp  CMakeLists.txt  ConfigLoaderTest.cpp  ConfigTest.cpp  CuptiActivityProfilerTest.cpp  CuptiCallbackAPITest.cpp  CuptiCallbackApiTest.cpp  CuptiProfilerApiTest.cu  CuptiRangeProfilerApiTest.cpp  CuptiRangeProfilerConfigTest.cpp  CuptiRangeProfilerTest.cpp  CuptiRangeProfilerTestUtil.h  CuptiStringsTest.cpp  DelayedInitializerTest.cpp  DevicePropertiesTest.cpp  DynamicPluginTest.cpp  EventProfilerTest.cpp  GenericActivityProfilerTeardownTest.cpp  GenericTraceActivityMetadataTest.cpp  LoggerObserverTest.cpp  MockActivitySubProfiler.cpp  MockActivitySubProfiler.h  MockCpuActivityBuffer.cpp  MockCpuActivityBuffer.h  MockSocket.h  OutputJsonTest.cpp  PidInfoTest.cpp  PortConfigLoaderTest.cpp  RegisterLoggerFactoryTest.cpp  RocmActivityProfilerTest.cpp  RoctracerActivityProfilerTest.cpp  SyncActivityProfilerHandlerTest.cpp  TestUtils.cpp  TestUtils.h  TraceProtocolTest.cpp  TypedMetadataTest.cpp  XpuptiScopeProfilerCompute.cpp  (+2 more)
libkineto/test/xpupti/: CMakeLists.txt  XpuptiActivityHandlersTest.cpp  XpuptiFlowCorrelationTest.cpp  XpuptiProfilerTest.cpp  XpuptiScopeProfilerConfigTest.cpp  XpuptiScopeProfilerTest.cpp  XpuptiTestUtilities.cpp  XpuptiTestUtilities.h
libkineto/test/xpupti/compute/: CMakeLists.txt  XpuptiScopeProfilerCompute.cpp  XpuptiScopeProfilerCompute.h
libkineto/utils/: ScopeExit.h
plugin/: .gitignore  README.md  setup.py
profiler/: BUILD  README.md  WORKSPACE  angular-metadata.tsconfig.json  install_and_run.py  package.json  requirements.txt  tsconfig.json
tb_plugin/: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  (+2 more)
(+559 files in other folders)
